# api/openapi.yaml
@@ -24,6 +24,8 @@ tags:
     description: Datasets are used to upload documents that can be used for fine-tuning
   - name: Training Jobs
     description: Deals with training jobs
+  - name: Inference Engines
+    description: Inference Engine API endpoints
   - name: Deployments
     description: Deals with deployments
   - name: Inference
@@ -372,30 +374,6 @@ paths:
                         label1: 300
                         label2: 300
                         label3: 500
-#                lora_configs:
-#                  type: object
-#                  description: Lora configurations
-#                  properties:
-#                    rank:
-#                      type: integer
-#                      example: 32
-#                      description: rank [0-256] (default = 32)
-#                    lora_alpha:
-#                      type: integer
-#                      example: 64
-#                      description: alpha [0-256] (default = 64)
-#                    lora_dropout:
-#                      type: number
-#                      example: 0.05
-#                      description: dropout [0-1] (default = 0.05)
-#                quantization:
-#                  type: string
-#                  enum:
-#                    - int4
-#                    - int8
-#                    - fp16
-#                  example: "int4"
-#                  description: "Quantization type for the model (default = int4)"
                 hf_model_link:
                   type: string
                   example: "https://huggingface.co/my_model"
@@ -629,6 +607,83 @@ paths:
                   "$ref": "#/components/schemas/TrainingJobCheckpoint"
         '404':
           $ref: '#/components/responses/NotFound'
+  '/v1/engines':
+    post:
+      tags:
+        - Inference Engines
+      summary: Create Inference Engine
+      description: Create a new inference engine.
+      operationId: createEngine
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: "inference-test-engine"
+                base_model:
+                  type: string
+                  example: "Llama-3.2-1B-Instruct"
+                task_type:
+                  type: string
+                  example: "text-generation"
+                resource_management_config:
+                  oneOf:
+                    - title: Inactive Timeout
+                      description: Specifies the period of inactivity, in seconds, after which the deployment will be automatically deactivated if no incoming requests are received. While deactivated, the deployment incurs no charges. When a request is sent to a deactivated deployment, it will be reactivated to process the request; this reactivation process typically introduces a delay of approximately 8 to 20 minutes before the deployment becomes fully operational.
+                      type: object
+                      properties:
+                        management_type:
+                          type: string
+                          example: "inactive_timeout"
+                        management_config:
+                          type: object
+                          properties:
+                            inactive_duration:
+                              type: integer
+                              example: 3600
+                              description: Period of inactivity
+                    - title: Schedule
+                      description: Specifies the schedule which the engine will be deployed with deployments (if existing on the engine).
+                      type: object
+                      properties:
+                        management_type:
+                          type: string
+                          example: "schedule"
+                        management_config:
+                          type: object
+                          properties:
+                            timezone:
+                              type: string
+                              example: "America/Los_Angeles"
+                              description: The IANA timezone for the schedule
+                            start_time:
+                              type: string
+                              example: "10:00"
+                              description: The start time for the schedule in HH:MM format
+                            end_time:
+                              type: string
+                              example: "18:00"
+                              description: The end time for the schedule in HH:MM format
+                            days:
+                              type: array
+                              example: [ "monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday" ]
+                              items:
+                                type: string
+                                enum:
+                                  - monday
+                                  - tuesday
+                                  - wednesday
+                                  - thursday
+                                  - friday
+                                  - saturday
+                                  - sunday
+                              description: The days of the week for the schedule
+              required:
+                - base_model
   '/v1/projects/{project_id}/deployments':
     post:
       tags:
